--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "140th-web-present-post",
+  "name": "present-for-140th-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
