--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
